--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,31 @@
 # This is an example and may include too much for your use-case.
 # You can modify this file to suit your needs.
 /.esphome/
-/secrets.yaml
+secrets.yaml
+
+# Sensitive configuration files
+chair-display.yaml
+
+# Python cache and virtual environment
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+.venv/
+
+# Build directories
+build/
+dist/
+*.egg-info/
+
+# IDE and OS files
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
