--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@ chair-display.yaml
 
 # Python cache and virtual environment
 __pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 *.so
+*.pyc
+*.pyo
 .Python
 venv/
 env/
