--- a/example_config.yaml
+++ b/example_config.yaml
@@ -34,12 +34,11 @@ psram:
   mode: octal
   speed: 80MHz  
 
-# External components - sourced from GitHub repository
+# External components - using local path for testing
 external_components:
   - source:
-      type: git
-      url: https://github.com/jtbnz/esphome_UEDX80480070ESP32
-      ref: main
+      type: local
+      path: components
     components: [viewe_display]
 
 # Logger configuration
@@ -49,12 +48,12 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: "addyourkeyhere"
+    key: "YQyUKJ2x2K3hhaW2n8Y7kQmVJR9GQHQ2PkXRpCYYNWk="
 
 # OTA updates
 ota:
   - platform: esphome
-    password: "addyourkeyhere"
+    password: "changeme123"
 
 wifi:
   ssid: !secret wifi_ssid
