Update status LED configuration to specify GPIO pin number and ignore strapping warning

--- a/example_config.yaml
+++ b/example_config.yaml
@@ -186,7 +186,9 @@ light:
   - platform: esp32_rmt_led_strip
     id: status_led
     rgb_order: GRB
-    pin: 0
+    pin: 
+      number: GPIO0
+      ignore_strapping_warning: true
     num_leds: 1
     chipset: ws2812
     name: "status LED"    
